P4PADEV-1657 fix issues